--- a/3DEngine.vcxproj
+++ b/3DEngine.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="core\Cube.h" />
     <ClInclude Include="core\Game.h" />
     <ClInclude Include="core\Matrix.h" />
+    <ClInclude Include="core\PhysicEngine.h" />
     <ClInclude Include="core\RenderEngine.h" />
     <ClInclude Include="core\Settings.h" />
     <ClInclude Include="core\Triangle.h" />
@@ -162,6 +163,7 @@
   <ItemGroup>
     <ClCompile Include="core\Cube.cpp" />
     <ClCompile Include="core\Game.cpp" />
+    <ClCompile Include="core\PhysicEngine.cpp" />
     <ClCompile Include="core\RenderEngine.cpp" />
     <ClCompile Include="core\Triangle.cpp" />
     <ClCompile Include="main.cpp" />
