--- a/3DEngine.vcxproj.filters
+++ b/3DEngine.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="core\Cube.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="core\PhysicEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\Vector3.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="core\Triangle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="core\PhysicEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
