--- a/3DEngine.vcxproj.filters
+++ b/3DEngine.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="core\physics\PhysicEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="core\objects\GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="core\Transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\Vector3.cpp">
