--- a/3DEngine.vcxproj.filters
+++ b/3DEngine.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="core\physics\PhysicEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="core\objects\GameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="core\Matrix.tpp" />
