--- a/3DEngine.vcxproj
+++ b/3DEngine.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="core\rendering\Triangle.h" />
     <ClInclude Include="core\Transform.h" />
     <ClInclude Include="core\Vector3.h" />
+    <ClInclude Include="core\Vector4.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\objects\Cube.cpp" />
@@ -169,6 +170,7 @@
     <ClCompile Include="core\physics\PhysicEngine.cpp" />
     <ClCompile Include="core\rendering\RenderEngine.cpp" />
     <ClCompile Include="core\rendering\Triangle.cpp" />
+    <ClCompile Include="core\Vector4.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="core\Matrix.cpp" />
     <ClCompile Include="core\Vector3.cpp" />
