--- a/3DEngine.vcxproj
+++ b/3DEngine.vcxproj
@@ -153,7 +153,7 @@
   <ItemGroup>
     <ClInclude Include="core\objects\Cube.h" />
     <ClInclude Include="core\Game.h" />
-    <ClInclude Include="core\Matrix.h" />
+    <ClInclude Include="core\Matrix4.h" />
     <ClInclude Include="core\objects\GameObject.h" />
     <ClInclude Include="core\physics\PhysicEngine.h" />
     <ClInclude Include="core\rendering\RenderEngine.h" />
@@ -172,11 +172,8 @@
     <ClCompile Include="core\rendering\Triangle.cpp" />
     <ClCompile Include="core\Vector4.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="core\Matrix.cpp" />
+    <ClCompile Include="core\Matrix4.cpp" />
     <ClCompile Include="core\Vector3.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="core\Matrix.tpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
