--- a/3DEngine.vcxproj
+++ b/3DEngine.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="core\Matrix4.h" />
     <ClInclude Include="core\objects\GameObject.h" />
     <ClInclude Include="core\physics\PhysicEngine.h" />
+    <ClInclude Include="core\rendering\Camera.h" />
     <ClInclude Include="core\rendering\RenderEngine.h" />
     <ClInclude Include="core\Settings.h" />
     <ClInclude Include="core\rendering\Triangle.h" />
@@ -168,6 +169,7 @@
     <ClCompile Include="core\Game.cpp" />
     <ClCompile Include="core\objects\GameObject.cpp" />
     <ClCompile Include="core\physics\PhysicEngine.cpp" />
+    <ClCompile Include="core\rendering\Camera.cpp" />
     <ClCompile Include="core\rendering\RenderEngine.cpp" />
     <ClCompile Include="core\rendering\Triangle.cpp" />
     <ClCompile Include="core\Vector4.cpp" />
