--- a/3DEngine.vcxproj
+++ b/3DEngine.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="core\Game.h" />
     <ClInclude Include="core\Matrix4.h" />
     <ClInclude Include="core\objects\GameObject.h" />
+    <ClInclude Include="core\physics\Intersection.h" />
     <ClInclude Include="core\physics\PhysicEngine.h" />
     <ClInclude Include="core\rendering\Camera.h" />
     <ClInclude Include="core\rendering\RenderEngine.h" />
@@ -168,6 +169,7 @@
     <ClCompile Include="core\objects\Cube.cpp" />
     <ClCompile Include="core\Game.cpp" />
     <ClCompile Include="core\objects\GameObject.cpp" />
+    <ClCompile Include="core\physics\Intersection.cpp" />
     <ClCompile Include="core\physics\PhysicEngine.cpp" />
     <ClCompile Include="core\rendering\Camera.cpp" />
     <ClCompile Include="core\rendering\RenderEngine.cpp" />
