--- a/3DEngine.vcxproj.filters
+++ b/3DEngine.vcxproj.filters
@@ -66,11 +66,11 @@
     <ClInclude Include="core\Vector4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="core\rendering\Camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="core\physics\Intersection.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\physics</Filter>
+    </ClInclude>
+    <ClInclude Include="core\rendering\Camera.h">
+      <Filter>Header Files\rendering</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -104,10 +104,13 @@
     <ClCompile Include="core\Vector4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="core\rendering\Camera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="core\physics\Intersection.cpp">
+      <Filter>Source Files\physics</Filter>
+    </ClCompile>
+    <ClCompile Include="core\rendering\Camera.cpp">
+      <Filter>Source Files\rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="core\Transform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
