--- a/3DEngine.vcxproj
+++ b/3DEngine.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="core\rendering\Camera.cpp" />
     <ClCompile Include="core\rendering\RenderEngine.cpp" />
     <ClCompile Include="core\rendering\Triangle.cpp" />
+    <ClCompile Include="core\Transform.cpp" />
     <ClCompile Include="core\Vector4.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="core\Matrix4.cpp" />
