--- a/3DEngine.vcxproj.filters
+++ b/3DEngine.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="core\rendering\Camera.h">
       <Filter>Header Files\rendering</Filter>
     </ClInclude>
+    <ClInclude Include="core\Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\Vector3.cpp">
@@ -111,6 +114,9 @@
       <Filter>Source Files\rendering</Filter>
     </ClCompile>
     <ClCompile Include="core\Transform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="core\Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
