--- a/3DEngine.vcxproj.filters
+++ b/3DEngine.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="core\objects\RegularPolygon.h">
       <Filter>Header Files\objects</Filter>
     </ClInclude>
+    <ClInclude Include="core\objects\Pyramid.h">
+      <Filter>Header Files\objects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\Vector3.cpp">
@@ -123,6 +126,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="core\objects\RegularPolygon.cpp">
+      <Filter>Source Files\objects</Filter>
+    </ClCompile>
+    <ClCompile Include="core\objects\Pyramid.cpp">
       <Filter>Source Files\objects</Filter>
     </ClCompile>
   </ItemGroup>
